--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,23 +8,19 @@ android {
         exclude 'META-INF/NOTICE'
     }
     compileSdkVersion 19
-    buildToolsVersion "19.1.0"
+    buildToolsVersion "21.1.2"
 
     defaultConfig {
         minSdkVersion 18
         targetSdkVersion 18
         versionCode 2
         versionName "1.0.0-SNAPSHOT"
-        testInstrumentationRunner "com.google.android.apps.common.testing.testrunner.GoogleInstrumentationTestRunner"
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
             minifyEnabled false
         }
-    }
-
-    dexOptions {
-        jumboMode true
     }
     sourceSets {
         androidTest {
@@ -34,15 +30,7 @@ android {
 }
 
 dependencies {
-    // Double Espresso
-    androidTestCompile('com.jakewharton.espresso:espresso:1.1-r3') {
-        exclude group: 'com.squareup.dagger'
-        exclude group: 'org.hamcrest'
-        exclude group: 'com.google.guava'
-    }
-
-    androidTestCompile('com.jakewharton.espresso:espresso-support-v4:1.1-r3') {
-        exclude group: 'com.android.support'
-    }
+    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.0'
+    androidTestCompile 'com.android.support.test:testing-support-lib:0.1'
 }
 
