--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,19 +2,21 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           android:versionCode="2"
           android:versionName="1.0.0-SNAPSHOT"
-          package="com.example">
+          package="com.github.jamesgoodwin.androidtesting">
 
     <uses-sdk android:minSdkVersion="18"
               android:targetSdkVersion="18"/>
 
-    <application android:name=".DeckardApplication">
+    <application android:name=".AndroidTestingApplication">
 
-        <activity android:name=".robolectric.DeckardActivity" android:screenOrientation="portrait">
+        <activity android:name=".LoadingActivity" android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        
+        <activity android:name=".ResultActivity" />
 
     </application>
 </manifest>
