--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,36 +1,62 @@
+repositories {
+    maven {
+        url 'https://oss.sonatype.org/content/repositories/snapshots/'
+    }
+}
+
 apply plugin: 'com.android.application'
 
 android {
-    packagingOptions {
-        exclude 'LICENSE.txt'
-        exclude 'META-INF/LICENSE'
-        exclude 'META-INF/LICENSE.txt'
-        exclude 'META-INF/NOTICE'
-    }
-    compileSdkVersion 19
+
+    compileSdkVersion 21
     buildToolsVersion "21.1.2"
 
     defaultConfig {
         minSdkVersion 18
-        targetSdkVersion 18
+        targetSdkVersion 21
         versionCode 2
         versionName "1.0.0-SNAPSHOT"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+    
     buildTypes {
         release {
             minifyEnabled false
         }
     }
-    sourceSets {
-        androidTest {
-            setRoot('src/test')
-        }
-    }
 }
 
 dependencies {
+
+    compile 'com.android.support:appcompat-v7:21.0.3'
+
+    testCompile 'junit:junit:4.12'
+    testCompile 'org.mockito:mockito-core:1.9.5'
+    
+    testCompile('org.robolectric:robolectric:3.0-SNAPSHOT') {
+        exclude module: 'classworlds'
+        exclude module: 'commons-logging'
+        exclude module: 'httpclient'
+        exclude module: 'maven-artifact'
+        exclude module: 'maven-artifact-manager'
+        exclude module: 'maven-error-diagnostics'
+        exclude module: 'maven-model'
+        exclude module: 'maven-project'
+        exclude module: 'maven-settings'
+        exclude module: 'plexus-container-default'
+        exclude module: 'plexus-interpolation'
+        exclude module: 'plexus-utils'
+        exclude module: 'sqlite-jdbc'
+        exclude module: 'wagon-file'
+        exclude module: 'wagon-http-lightweight'
+        exclude module: 'wagon-provider-api'
+        exclude group: 'org.apache.httpcomponents'
+        exclude group: 'com.android.support', module: 'support-v4'
+        exclude group: 'com.google.android', module: 'support-v4'
+    }
+    
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.0'
     androidTestCompile 'com.android.support.test:testing-support-lib:0.1'
+    
 }
 
