--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,8 @@
     <uses-sdk android:minSdkVersion="18"
               android:targetSdkVersion="18"/>
 
-    <application android:name=".AndroidTestingApplication">
+    <application android:name=".AndroidTestingApplication"
+        android:theme="@style/AppTheme">
 
         <activity android:name=".LoadingActivity" android:screenOrientation="portrait">
             <intent-filter>
